--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="new_version">Ny version</string> 
-	<string name="upgrade">Opgrader</string> 
-	<string name="not_now">Ikke nu</string> 
-	<string name="loading">Indlæser\u2026</string> 
+
+    <string name="new_version">Ny version</string> 
+    <string name="upgrade">Opgrader</string> 
+    <string name="not_now">Ikke nu</string> 
+    <string name="loading">Indlæser\u2026</string> 
     <string name="about_author">Forfatter:</string>
     <string name="about_blizzard">Snestorm</string>
     <string name="about_cloudy">Skyet</string>
@@ -140,6 +141,7 @@
     <string name="settings_update_wake_title">Væk telefon</string>
     <string name="settings_update_wifi_only_summary">Opdater automatisk vejrudsigt, men kun ved Wi-Fi forbindelse</string>
     <string name="settings_update_wifi_only_title">Opdater kun ved Wi-Fi</string>
+    <string name="settings_weather_provider">Vejr udbyder</string>
     <string name="settings_widgets_click_clock_summary">Start app ved tryk på ur i widget</string>
     <string name="settings_widgets_click_clock_title">Tryk på ur</string>
     <string name="settings_widgets_click_date_summary">Start app ved tryk på dato i widget</string>
@@ -226,4 +228,51 @@
     <string name="wind_w">V</string>
     <string name="wind_wnw">V-NV</string>
     <string name="wind_wsw">V-SV</string>
+    <string name="foreca_clear">Klart</string>
+    <string name="foreca_mostly_clear">Overvejende klart</string>
+    <string name="foreca_mostly_clear_pos_rain">Risiko for regn</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Risiko for slud</string>
+    <string name="foreca_mostly_clear_pos_snow">Risiko for sne</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Risiko for torden med regn</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Risiko for torden med slud</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Risiko for torden med sne</string>
+    <string name="foreca_partly_cloudy">Delvist skyet</string>
+    <string name="foreca_partly_cloudy_l_rain">Let regn</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Let slud</string>
+    <string name="foreca_partly_cloudy_l_snow">Let sne</string>
+    <string name="foreca_partly_cloudy_showers">Regnbyger</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Byger med slud</string>
+    <string name="foreca_partly_cloudy_snow_showers">Snebyger</string>
+    <string name="foreca_partly_cloudy_rain">Regn</string>
+    <string name="foreca_partly_cloudy_wet_snow">Slud</string>
+    <string name="foreca_partly_cloudy_snow">Sne</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Risiko for torden med regn</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Risiko for torden med slud</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Risiko for torden med sne</string>
+    <string name="foreca_cloudy">Skyet</string>
+    <string name="foreca_cloudy_l_rain">Let regn</string>
+    <string name="foreca_cloudy_l_wet_snow">Let slud</string>
+    <string name="foreca_cloudy_l_snow">Let sne</string>
+    <string name="foreca_cloudy_showers">Regnbyger</string>
+    <string name="foreca_cloudy_wet_snow_showers">Sludbyger</string>
+    <string name="foreca_cloudy_snow_showers">Snebyger</string>
+    <string name="foreca_cloudy_rain">Regn</string>
+    <string name="foreca_cloudy_wet_snow">Slud</string>
+    <string name="foreca_cloudy_snow">Sne</string>
+    <string name="foreca_cloudy_ts_rain">Torden med regn</string>
+    <string name="foreca_cloudy_ts_wet_snow">Torden med slud</string>
+    <string name="foreca_cloudy_ts_snow">Torden med sne</string>
+    <string name="foreca_overcast">Overskyet</string>
+    <string name="foreca_overcast_l_rain">Let regn</string>
+    <string name="foreca_overcast_l_wet_snow">Let slud</string>
+    <string name="foreca_overcast_l_snow">Let sne</string>
+    <string name="foreca_overcast_showers">Regnbyger</string>
+    <string name="foreca_overcast_wet_snow_showers">Sludbyger</string>
+    <string name="foreca_overcast_snow_showers">Snebyger</string>
+    <string name="foreca_overcast_rain">Regn</string>
+    <string name="foreca_overcast_wet_snow">Slud</string>
+    <string name="foreca_overcast_snow">Sne</string>
+    <string name="foreca_overcast_ts_rain">Torden med regn</string>
+    <string name="foreca_overcast_ts_wet_snow">Torden med slud</string>
+    <string name="foreca_overcast_ts_snow">Torden med sne</string>
 </resources>
