--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -8,7 +8,7 @@
     <string name="about_fog">Туман</string>
     <string name="about_rainstorm">Шквалистые дожди</string>
     <string name="about_t_storms">Гроза</string>
-    <string name="about_rain_showers">Ливневые дожди</string>
+    <string name="about_rain_drizzle">Морось</string>
     <string name="about_heavy_rain">Сильный дождь</string>
     <string name="about_moderate_rain">Дождь</string>
     <string name="about_light_rain">Слабый дождь</string>
@@ -20,9 +20,11 @@
     <string name="about_light_snow">Слабый снег</string>
     <string name="about_dust">Песчаная буря</string>
     <string name="about_hailstone">Град</string>
-    <string name="about_haze">Пыль</string>
+    <string name="about_haze">Дымка</string>
     <string name="about_for_translators">Для переводчиков:</string>
-    <string name="about_for_translators_text">Если Вы хотите перевести данное приложение на Ваш язык, перейдите в мой аккаунт github (по кнопке выше)</string>
+    <string name="about_for_translators_text">Если Вы хотите перевести данное приложение на Ваш
+        язык, перейдите в мой аккаунт github (по иконке выше)
+    </string>
     <string name="about_social">Ссылки:</string>
     <string name="animation_preview">Предпросмотр анимации</string>
     <string name="app_name">Погода BZ</string>
@@ -51,18 +53,29 @@
     <string name="donate">Пожертвование</string>
     <string name="donations_button_close">Закрыть</string>
     <string name="donations_description">"Считаете ли вы приложение полезным?
-Поддержите разработчика через flattr или отправьте пожертвование через Google Play Store!"</string>
+        Поддержите разработчика через flattr или отправьте пожертвование через Google Play Store!"
+    </string>
     <string name="donations_flattr">Flattr</string>
-    <string name="donations_flattr_description">Flattr взимает 10% в виде ежемесячной абонентской платы!</string>
+    <string name="donations_flattr_description">Flattr взимает 10% в виде ежемесячной абонентской
+        платы!
+    </string>
     <string name="donations_google_android_market">Google Play Store</string>
-    <string name="donations_google_android_market_description">Google взимает 30% с каждого пожертвования!</string>
+    <string name="donations_google_android_market_description">Google взимает 30% с каждого
+        пожертвования!
+    </string>
     <string name="donations_google_android_market_donate_button">Пожертвовать!</string>
-    <string name="donations_google_android_market_not_supported">Пожертвования через приложение не поддерживаются. Google Play Store установлен правильно?</string>
-    <string name="donations_google_android_market_not_supported_title">Пожертвования через приложение не поддерживаются</string>
+    <string name="donations_google_android_market_not_supported">Пожертвования через приложение не
+        поддерживаются. Google Play Store установлен правильно?
+    </string>
+    <string name="donations_google_android_market_not_supported_title">Пожертвования через
+        приложение не поддерживаются
+    </string>
     <string name="donations_google_android_market_text">Сколько?</string>
     <string name="donations_paypal">PayPal</string>
     <string name="donations_yandex">Яндекс.Деньги</string>
-    <string name="donations_paypal_description">После нажатия на кнопку вы можете выбрать сколько хотите пожертвовать!</string>
+    <string name="donations_paypal_description">После нажатия на кнопку вы можете выбрать сколько
+        хотите пожертвовать!
+    </string>
     <string name="donations_thanks_dialog">Благодарю за пожертвование! Я очень это ценю!</string>
     <string name="donations_thanks_dialog_title">Благодарю!</string>
     <string name="download_video">Скачать видео</string>
@@ -82,7 +95,7 @@
     <string name="foreca_cloudy_ts_wet_snow">Гроза с мокрым снегом</string>
     <string name="foreca_cloudy_wet_snow">Мокрый снег</string>
     <string name="foreca_cloudy_wet_snow_showers">Мокрый снег</string>
-    <string name="foreca_mostly_clear">Преимущественно ясно</string>
+    <string name="foreca_mostly_clear">Ясно</string>
     <string name="foreca_mostly_clear_pos_rain">Возможен дождь</string>
     <string name="foreca_mostly_clear_pos_snow">Возможен снег</string>
     <string name="foreca_mostly_clear_pos_ts_rain">Возможна гроза с дождем</string>
@@ -146,11 +159,12 @@
     <string name="moon_current_view">Период отображения: %s</string>
     <string name="moon_illuminated">Освещено</string>
     <string name="moon_since">Начиная с</string>
-    <string name="network_error">"Нет соединения с сервером.
-Проверьте настройки сети."</string>
+    <string name="network_error">"Нет соединения с сервером.\nПроверьте настройки сети."</string>
+    <string name="network_in_quiet_hours">Активен режим Тихих часов. Обновление отклонено.</string>
+    <string name="network_in_roaming">Включен запрет обновления в роуминге.</string>
+    <string name="network_wifi_only">Обновление настроено только через Wi-fi.</string>
     <string name="new_version">Новая версия</string>
-    <string name="no_provider">"Ошибка определения местоположения
-Выберите местоположение вручную"</string>
+    <string name="no_provider">"Ошибка определения местоположения.\nВыберите местоположение вручную"</string>
     <string name="no_weather_provider">MIUI weather provider не найден</string>
     <string name="not_now">Не сейчас</string>
     <string name="ok">OK</string>
@@ -164,9 +178,13 @@
     <string name="quiet_hours_title">Тихие часы</string>
     <string name="settings_about_summary">Информация о программе</string>
     <string name="settings_about_title">О программе</string>
-    <string name="settings_animation_download_summary">Загружать видео файлы анимации из сети Интернет (если они не найдены в локальном хранилище)</string>
+    <string name="settings_animation_download_summary">Загружать видео файлы анимации из сети
+        Интернет (если они не найдены в локальном хранилище)
+    </string>
     <string name="settings_animation_download_title">Загружать анимацию</string>
-    <string name="settings_animation_show_summary">Воспроизводить видео анимацию для текущего прогноза погоды</string>
+    <string name="settings_animation_show_summary">Воспроизводить видео анимацию для текущего
+        прогноза погоды
+    </string>
     <string name="settings_animation_show_title">Воспроизводить анимацию</string>
     <string name="settings_animation_type">Тип анимации</string>
     <string name="settings_category_animation">Анимация</string>
@@ -176,53 +194,82 @@
     <string name="settings_category_appearance_sum">Единицы измерения, цвет текста и т.д.</string>
     <string name="settings_category_forecast_update">Обновление прогноза</string>
     <string name="settings_category_miui">Прошивки MIUI</string>
-    <string name="settings_category_miui_sum">Настройки для прошивок MIUI, очистка погодных данных MIUI</string>
+    <string name="settings_category_miui_sum">Настройки для прошивок MIUI, очистка погодных данных
+        MIUI
+    </string>
     <string name="settings_category_network">Настройки сети</string>
     <string name="settings_category_notification">Уведомления</string>
     <string name="settings_category_notification_sum">Состояние погоды в статусной строке</string>
     <string name="settings_category_update">Обновление</string>
-    <string name="settings_category_update_sum">Настройки автообновления и времени обновления прогноза</string>
+    <string name="settings_category_update_sum">Настройки автообновления и времени обновления
+        прогноза
+    </string>
     <string name="settings_category_widgets">Виджеты</string>
-    <string name="settings_category_widgets_sum">Внешний вид виджетов и действия по нажатию на виджеты</string>
+    <string name="settings_category_widgets_sum">Внешний вид виджетов и действия по нажатию на
+        виджеты
+    </string>
     <string name="settings_citydb_provider">База городов</string>
     <string name="settings_click_actions">Действия по нажатию</string>
-    <string name="settings_check_updates_summary">Проверять наличие новой версии приложения при запуске</string>
+    <string name="settings_check_updates_summary">Проверять наличие новой версии приложения при
+        запуске
+    </string>
     <string name="settings_check_updates_title">Проверять обновления</string>
+    <string name="settings_colorize_weather_icons_title">Раскрашивать иконки</string>
+    <string name="settings_colorize_weather_icons_summary">Окрашивать иконки погоды в цвет текста (например, для белых иконок)</string>
     <string name="settings_hide_bottom_bar_title">Скрывать нижнюю панель</string>
-    <string name="settings_hide_bottom_bar_summary">Скрывать панель с кнопками кликом по экрану</string>
-    <string name="settings_miui_support_summary">Включает поддержку встроенных виджетов MIUI</string>
+    <string name="settings_hide_bottom_bar_summary">Скрывать панель с кнопками кликом по экрану
+    </string>
+    <string name="settings_miui_support_summary">Включает поддержку встроенных виджетов MIUI
+    </string>
     <string name="settings_miui_support_title">Виджеты MIUI</string>
     <string name="settings_miui_v5_summary">Включите, если у вас MIUI v5</string>
     <string name="settings_miui_v5_title">Прошивка MIUI v5</string>
     <string name="settings_moon_phases_title">Фазы луны</string>
     <string name="settings_notification_color_title">Цвет символа уведомления</string>
-    <string name="settings_notification_summary">Отображать прогноз погоды в области уведомлений</string>
-    <string name="settings_notification_text_color_summary">Цвет текста и иконки уведомления</string>
+    <string name="settings_notification_summary">Отображать прогноз погоды в области уведомлений
+    </string>
+    <string name="settings_notification_text_color_summary">Цвет текста и иконки уведомления
+    </string>
     <string name="settings_notification_title">Уведомление о погоде</string>
     <string name="settings_notification_type">Тип уведомления</string>
     <string name="settings_show_info_summary">Показывать или скрыть элементы интерфейса</string>
     <string name="settings_show_info_title">Отображение данных</string>
-    <string name="settings_show_weather_icons_summary">Показывать иконки погоды (вместо текстового описания состояния погоды) в прогнозе на 3 дня</string>
+    <string name="settings_show_weather_icons_summary">Показывать иконки погоды (вместо текстового
+        описания состояния погоды) в прогнозе на 3 дня
+    </string>
     <string name="settings_show_weather_icons_title">Иконки погоды</string>
     <string name="settings_time_format_12h">12-часовой формат</string>
-    <string name="settings_update_autoupdate_summary">Автоматическое обновление прогноза погоды</string>
+    <string name="settings_update_autoupdate_summary">Автоматическое обновление прогноза погоды
+    </string>
     <string name="settings_update_autoupdate_title">Автообновление</string>
     <string name="settings_update_interval_title">Интервал обновления</string>
-    <string name="settings_update_roaming_summary">Обновлять прогноз погоды в роуминге. Это может увеличить ваши расходы по оплате счетов сотовой связи</string>
+    <string name="settings_update_roaming_summary">Обновлять прогноз погоды в роуминге. Это может
+        увеличить ваши расходы по оплате счетов сотовой связи
+    </string>
     <string name="settings_update_roaming_title">Обновлять в роуминге</string>
     <string name="settings_update_wake_title">Пробуждать устройство</string>
-    <string name="settings_update_wifi_only_summary">Обновлять прогноз погоды только при наличии подключения по сети Wi-Fi</string>
+    <string name="settings_update_wifi_only_summary">Обновлять прогноз погоды только при наличии
+        подключения по сети Wi-Fi
+    </string>
     <string name="settings_update_wifi_only_title">Обновлять только по Wi-Fi</string>
     <string name="settings_weather_provider">Поставщик прогноза</string>
-    <string name="settings_widgets_click_clock_summary">Выбор приложения для запуска по нажатию на часы</string>
+    <string name="settings_widgets_click_clock_summary">Выбор приложения для запуска по нажатию на
+        часы
+    </string>
     <string name="settings_widgets_click_clock_title">Нажатие на часы</string>
-    <string name="settings_widgets_click_date_summary">Выбор приложения для запуска по нажатию на дату</string>
+    <string name="settings_widgets_click_date_summary">Выбор приложения для запуска по нажатию на
+        дату
+    </string>
     <string name="settings_widgets_click_date_title">Нажатие на дату</string>
-    <string name="settings_widgets_click_weather_summary">Выбор приложения для запуска по нажатию на прогноз</string>
+    <string name="settings_widgets_click_weather_summary">Выбор приложения для запуска по нажатию на
+        прогноз
+    </string>
     <string name="settings_widgets_click_weather_title">Нажатие на прогноз</string>
     <string name="settings_widgets_widget4x1">Виджет 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Дополнительные данные</string>
-    <string name="settings_widgets_widget4x1_transparent_sum">Снимите галочку для использования фона по умолчанию</string>
+    <string name="settings_widgets_widget4x1_transparent_sum">Снимите галочку для использования фона
+        по умолчанию
+    </string>
     <string name="settings_widgets_widget4x1_transparent_title">Прозрачный фон</string>
     <string name="settings_widgets_widget4x1_v5">Виджет 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Виджет 4x2 (v4)</string>
@@ -230,14 +277,16 @@
     <string name="settings_widgets_widget4x2_city_font_title">Город</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">По умолчанию 50sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Часы</string>
-    <string name="settings_widgets_widget4x2_custom_font_summary">Настройка размера шрифта для элементов виджета</string>
+    <string name="settings_widgets_widget4x2_custom_font_summary">Настройка размера шрифта для
+        элементов виджета
+    </string>
     <string name="settings_widgets_widget4x2_custom_font_title">Настройка шрифтов</string>
     <string name="settings_widgets_widget4x2_date_font_summary">По умолчанию 14sp</string>
     <string name="settings_widgets_widget4x2_date_font_title">Дата</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">По умолчанию 22sp</string>
     <string name="settings_widgets_widget4x2_desc_font_title">Описание погоды</string>
     <string name="settings_widgets_widget4x2_feel_font_summary">По умолчанию 14sp</string>
-    <string name="settings_widgets_widget4x2_feel_font_title">Ощущения</string>
+    <string name="settings_widgets_widget4x2_feel_font_title">Ощущается как</string>
     <string name="settings_widgets_widget4x2_temp_font_summary">По умолчанию 40sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Температура</string>
     <string name="settings_widgets_widget4x2_v5">Виджет 4x2 (v5)</string>
@@ -245,7 +294,9 @@
     <string name="settings_widgets_widget4x2_wind_font_title">Ветер</string>
     <string name="share">Поделиться</string>
     <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">\#WeatherBZ# Сегодня в %1$s %2$s, %3$s, %4$s. Обновлено %5$s.</string>
+    <string name="share_weather_content">\#WeatherBZ# Сегодня в %1$s %2$s, %3$s, %4$s. Обновлено
+        %5$s.
+    </string>
     <string name="share_weather_title">Поделиться прогнозом</string>
     <string name="save_screen_shot_failed">Ошибка при сохранении скриншота</string>
     <string name="start_time_title">Начало</string>
@@ -279,7 +330,7 @@
     <string name="weather_cond_snow">Снег</string>
     <string name="weather_cond_sunny">Ясно</string>
     <string name="weather_cond_t_storms">Гроза</string>
-    <string name="weather_feel">"Ощущения: "</string>
+    <string name="weather_feel">"Ощущается как: "</string>
     <string name="weather_humidity">"Влажность: "</string>
     <string name="weather_no_city">Город не выбран</string>
     <string name="weather_no_conditions_data">Нет данных</string>
