--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="about_fog">Fog</string>
     <string name="about_rainstorm">Rainstorm</string>
     <string name="about_t_storms">T-storms</string>
-    <string name="about_rain_showers">Rain Showers</string>
+    <string name="about_rain_drizzle">Drizzle</string>
     <string name="about_heavy_rain">Heavy Rain</string>
     <string name="about_moderate_rain">Moderate Rain</string>
     <string name="about_light_rain">Light Rain</string>
@@ -22,7 +22,9 @@
     <string name="about_hailstone">Hailstone</string>
     <string name="about_haze">Haze</string>
     <string name="about_for_translators">For Translators:</string>
-    <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>
+    <string name="about_for_translators_text">If you want to help with translation this app into
+        your language, just go to the my github page (using the button above) to see all resources
+    </string>
     <string name="about_social">Social links:</string>
     <string name="animation_preview">Preview animations</string>
     <string name="app_name">Weather BZ</string>
@@ -52,18 +54,28 @@
     <string name="dlg_set_as_home">Set as \"Home City\"</string>
     <string name="donate">Donate</string>
     <string name="donations_button_close">Close</string>
-    <string name="donations_description">Do you find this application useful?\nSupport it\'s development by flattring it or sending donations to the developer!</string>
+    <string name="donations_description">Do you find this application useful?\nSupport it\'s
+        development by flattring it or sending donations to the developer!
+    </string>
     <string name="donations_flattr">Flattr</string>
     <string name="donations_flattr_description">Flattr takes 10 % as a monthly fee!</string>
     <string name="donations_google_android_market">Google Play Store</string>
-    <string name="donations_google_android_market_description">Google takes 30 % off every donation!</string>
+    <string name="donations_google_android_market_description">Google takes 30 % off every
+        donation!
+    </string>
     <string name="donations_google_android_market_donate_button">Donate!</string>
-    <string name="donations_google_android_market_not_supported">In-App Donations are not supported. Is Google Play Store installed correctly?</string>
-    <string name="donations_google_android_market_not_supported_title">In-App Donations are not supported</string>
+    <string name="donations_google_android_market_not_supported">In-App Donations are not supported.
+        Is Google Play Store installed correctly?
+    </string>
+    <string name="donations_google_android_market_not_supported_title">In-App Donations are not
+        supported
+    </string>
     <string name="donations_google_android_market_text">How much?</string>
     <string name="donations_paypal">PayPal</string>
     <string name="donations_yandex">Yandex.Money</string>
-    <string name="donations_paypal_description">You can choose how much you want to donate after clicking the button!</string>
+    <string name="donations_paypal_description">You can choose how much you want to donate after
+        clicking the button!
+    </string>
     <string name="donations_paypal_item_name">InApp Donation</string>
     <string name="donations_thanks_dialog">Thanks for donating!\nI really appreciate this!</string>
     <string name="donations_thanks_dialog_title">Thanks!</string>
@@ -119,7 +131,7 @@
     <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
     <string name="changelog">Changelog</string>
     <string name="just_now">Just now</string>
-<string name="loading">Loading\u2026</string>
+    <string name="loading">Loading\u2026</string>
     <string name="location_edit">Enter city name</string>
     <string name="location_gps">Current location</string>
     <string name="location_list">Locations</string>
@@ -148,7 +160,10 @@
     <string name="moon_current_view">View mode: %s</string>
     <string name="moon_illuminated">Illuminated</string>
     <string name="moon_since">Since</string>
-<string name="network_error">Could not connect the server.\nCheck your network settings.</string>
+    <string name="network_error">Could not connect the server.\nCheck your network settings.</string>
+    <string name="network_in_quiet_hours">You are in Quiet Hours now. Updates cancelled.</string>
+    <string name="network_in_roaming">You have settings to disable updates in roaming.</string>
+    <string name="network_wifi_only">Updates set to Wi-Fi only.</string>
     <string name="new_version">New version</string>
     <string name="no_provider">Location is not available\nSelect location manually</string>
     <string name="no_weather_provider">No MIUI weather provider found</string>
@@ -164,9 +179,12 @@
     <string name="quiet_hours_title">Quiet hours</string>
     <string name="settings_about_summary">Information about application</string>
     <string name="settings_about_title">About</string>
-    <string name="settings_animation_download_summary">Download video files of animations for current weather condition (if video file not found in local storage)</string>
+    <string name="settings_animation_download_summary">Download video files of animations for
+        current weather condition (if video file not found in local storage)
+    </string>
     <string name="settings_animation_download_title">Download animations</string>
-    <string name="settings_animation_show_summary">Show weather animation for current conditions</string>
+    <string name="settings_animation_show_summary">Show weather animation for current conditions
+    </string>
     <string name="settings_animation_show_title">Show animation</string>
     <string name="settings_animation_type">Animation type</string>
     <string name="settings_category_animation">Animation</string>
@@ -176,7 +194,8 @@
     <string name="settings_category_appearance_sum">Measure units, text color etc.</string>
     <string name="settings_category_forecast_update">Forecast update</string>
     <string name="settings_category_miui">MIUI ROMs</string>
-    <string name="settings_category_miui_sum">MIUI support settings (turn on/off, clear data etc.)</string>
+    <string name="settings_category_miui_sum">MIUI support settings (turn on/off, clear data etc.)
+    </string>
     <string name="settings_category_network">Network settings</string>
     <string name="settings_category_notification">Notifications</string>
     <string name="settings_category_notification_sum">Weather notifications settings</string>
@@ -188,41 +207,60 @@
     <string name="settings_click_actions">Click actions</string>
     <string name="settings_check_updates_summary">Check for updates on application start</string>
     <string name="settings_check_updates_title">Check for updates</string>
+    <string name="settings_colorize_weather_icons_title">Colorize icons</string>
+    <string name="settings_colorize_weather_icons_summary">Set icons color to text color (for white weather icons for ex.)</string>
     <string name="settings_hide_bottom_bar_title">Hide bottom bar</string>
-    <string name="settings_hide_bottom_bar_summary">Touch screen to hide bottom bar with buttons</string>
+    <string name="settings_hide_bottom_bar_summary">Touch screen to hide bottom bar with buttons
+    </string>
     <string name="settings_miui_support_summary">Turn on to support MIUI native widgets</string>
     <string name="settings_miui_support_title">MIUI widgets support</string>
     <string name="settings_miui_v5_summary">Turn on if you have MIUI v5 ROM</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
     <string name="settings_moon_phases_title">Moon Phases</string>
     <string name="settings_notification_color_title">Statusbar symbol color</string>
-    <string name="settings_notification_summary">Show current weather conditions in the notification area</string>
-    <string name="settings_notification_text_color_summary">Notification text and icons color</string>
+    <string name="settings_notification_summary">Show current weather conditions in the notification
+        area
+    </string>
+    <string name="settings_notification_text_color_summary">Notification text and icons color
+    </string>
     <string name="settings_notification_title">Show Notification</string>
     <string name="settings_notification_type">Notification type</string>
     <string name="settings_show_info_summary">Show or hide interface elements</string>
     <string name="settings_show_info_title">Show info</string>
-    <string name="settings_show_weather_icons_summary">Show weather icons (instead of textual weather description) in 3-day forecast</string>
+    <string name="settings_show_weather_icons_summary">Show weather icons (instead of textual
+        weather description) in 3-day forecast
+    </string>
     <string name="settings_show_weather_icons_title">Show weather icons</string>
     <string name="settings_time_format_12h">12h time format</string>
     <string name="settings_update_autoupdate_summary">Auto update weather forecast</string>
     <string name="settings_update_autoupdate_title">Auto update</string>
     <string name="settings_update_interval_title">Update Interval</string>
-    <string name="settings_update_roaming_summary">Automatically update weather forecast even when roaming. Note that you can have an extra charges to your phone bill</string>
+    <string name="settings_update_roaming_summary">Automatically update weather forecast even when
+        roaming. Note that you can have an extra charges to your phone bill
+    </string>
     <string name="settings_update_roaming_title">Update in roaming</string>
     <string name="settings_update_wake_title">Wake device</string>
-    <string name="settings_update_wifi_only_summary">Automatically update weather forecast only when Wi-Fi connection established</string>
+    <string name="settings_update_wifi_only_summary">Automatically update weather forecast only when
+        Wi-Fi connection established
+    </string>
     <string name="settings_update_wifi_only_title">Update only on Wi-Fi</string>
     <string name="settings_weather_provider">Weather Provider</string>
-    <string name="settings_widgets_click_clock_summary">The app to start by clicking on widgets clock</string>
+    <string name="settings_widgets_click_clock_summary">The app to start by clicking on widgets
+        clock
+    </string>
     <string name="settings_widgets_click_clock_title">Click on Clock</string>
-    <string name="settings_widgets_click_date_summary">The app to start by clicking on widgets date</string>
+    <string name="settings_widgets_click_date_summary">The app to start by clicking on widgets
+        date
+    </string>
     <string name="settings_widgets_click_date_title">Click on Date</string>
-    <string name="settings_widgets_click_weather_summary">The app to start by clicking on widgets forecast area (temperature)</string>
+    <string name="settings_widgets_click_weather_summary">The app to start by clicking on widgets
+        forecast area (temperature)
+    </string>
     <string name="settings_widgets_click_weather_title">Click on Forecast</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Extended data</string>
-    <string name="settings_widgets_widget4x1_transparent_sum">Unchecked for default background</string>
+    <string name="settings_widgets_widget4x1_transparent_sum">Unchecked for default background
+    </string>
     <string name="settings_widgets_widget4x1_transparent_title">Transparent background</string>
     <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
@@ -230,14 +268,15 @@
     <string name="settings_widgets_widget4x2_city_font_title">City</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Default value 50sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Clock</string>
-    <string name="settings_widgets_widget4x2_custom_font_summary">Customize font size for widget</string>
+    <string name="settings_widgets_widget4x2_custom_font_summary">Customize font size for widget
+    </string>
     <string name="settings_widgets_widget4x2_custom_font_title">Custom font size</string>
     <string name="settings_widgets_widget4x2_date_font_summary">Default value 14sp</string>
     <string name="settings_widgets_widget4x2_date_font_title">Date</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">Default value 22sp</string>
     <string name="settings_widgets_widget4x2_desc_font_title">Weather description</string>
     <string name="settings_widgets_widget4x2_feel_font_summary">Default value 14sp</string>
-    <string name="settings_widgets_widget4x2_feel_font_title">Feelings</string>
+    <string name="settings_widgets_widget4x2_feel_font_title">RealFeel</string>
     <string name="settings_widgets_widget4x2_temp_font_summary">Default value 40sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Temperature</string>
     <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
@@ -245,7 +284,9 @@
     <string name="settings_widgets_widget4x2_wind_font_title">Wind</string>
     <string name="share">Share</string>
     <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">"\#WeatherBZ# Today %1$s's weather is %2$s, %3$s, %4$s. Updated %5$s."</string>
+    <string name="share_weather_content">"\#WeatherBZ# Today %1$s's weather is %2$s, %3$s, %4$s.
+        Updated %5$s."
+    </string>
     <string name="share_weather_title">Share weather data</string>
     <string name="save_screen_shot_failed">Failed to save screenshot</string>
     <string name="start_time_title">Start</string>
